gen/identitytoolkit/v3/cargo-errors.log
    Checking google-identitytoolkit3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/identitytoolkit/v3/lib)
error[E0603]: type alias `IdentitytoolkitRelyingpartyGetPublicKeysResponse` is private
    --> identitytoolkit/v3/lib/src/lib.rs:3401:33
     |
3401 |                 crate::schemas::IdentitytoolkitRelyingpartyGetPublicKeysResponse,
     |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: type alias `IdentitytoolkitRelyingpartyGetPublicKeysResponse` is private
    --> identitytoolkit/v3/lib/src/lib.rs:3413:33
     |
3413 |                 crate::schemas::IdentitytoolkitRelyingpartyGetPublicKeysResponse,
     |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
error: Could not compile `google-identitytoolkit3`.

To learn more, run the command again with --verbose.
